// Vitest Snapshot v1

exports[`Collapse > panel work > header work 1`] = `
"<div class=\\"ix-collapse\\">
  <div class=\\"ix-collapse-panel\\">
    <div class=\\"ix-header ix-header-md\\">
      <div class=\\"ix-header-content\\"><span class=\\"ix-header-prefix\\"><i class=\\"ix-icon ix-icon-right\\" style=\\"transform: rotate(0deg);\\" role=\\"img\\" aria-label=\\"right\\"></i></span>
        <!----><span class=\\"ix-header-title\\">header 0</span>
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    <transition-stub>
      <div class=\\"ix-collapse-panel-content\\" style=\\"display: none;\\">
        <div class=\\"ix-collapse-panel-content-box\\">
          <!---->
        </div>
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`Collapse > panel work > header work 2`] = `
"<div class=\\"ix-collapse\\">
  <div class=\\"ix-collapse-panel\\">
    <div class=\\"ix-header ix-header-md\\">
      <div class=\\"ix-header-content\\"><span class=\\"ix-header-prefix\\"><i class=\\"ix-icon ix-icon-right\\" style=\\"transform: rotate(0deg);\\" role=\\"img\\" aria-label=\\"right\\"><svg viewBox=\\"64 64 896 896\\" focusable=\\"false\\" aria-hidden=\\"true\\" data-icon=\\"right\\"><path d=\\"M661.568 534.016a29.888 29.888 0 0 0 0-45.376L414.144 265.408a38.336 38.336 0 0 0-50.24 0 29.888 29.888 0 0 0 0 45.312l212.288 191.552a11.968 11.968 0 0 1 0 18.112L362.432 713.28a29.888 29.888 0 0 0 0 45.312 38.336 38.336 0 0 0 50.24 0l248.96-224.64z\\"></path></svg></i></span>
        <!----><span class=\\"ix-header-title\\">hello header</span>
        <!----><span class=\\"ix-header-suffix\\"><i class=\\"ix-icon ix-icon-left\\" role=\\"img\\" aria-label=\\"left\\"><svg viewBox=\\"64 64 896 896\\" focusable=\\"false\\" aria-hidden=\\"true\\" data-icon=\\"left\\"><path d=\\"M362.432 534.016a29.888 29.888 0 0 1 0-45.376l247.424-223.232a38.336 38.336 0 0 1 50.24 0 29.888 29.888 0 0 1 0 45.312L447.808 502.272a11.968 11.968 0 0 0 0 18.112l213.76 192.896a29.888 29.888 0 0 1 0 45.312 38.336 38.336 0 0 1-50.24 0l-248.96-224.64z\\"></path></svg></i></span>
      </div>
      <!---->
    </div>
    <transition-stub>
      <div class=\\"ix-collapse-panel-content\\" style=\\"display: none;\\">
        <div class=\\"ix-collapse-panel-content-box\\">
          <!---->
        </div>
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`Collapse > render work 1`] = `
"<div class=\\"ix-collapse\\">
  <div class=\\"ix-collapse-panel\\">
    <div class=\\"ix-header ix-header-md\\">
      <div class=\\"ix-header-content\\"><span class=\\"ix-header-prefix\\"><i class=\\"ix-icon ix-icon-right\\" style=\\"transform: rotate(0deg);\\" role=\\"img\\" aria-label=\\"right\\"></i></span>
        <!----><span class=\\"ix-header-title\\">header 0</span>
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    <transition-stub>
      <div class=\\"ix-collapse-panel-content\\" style=\\"display: none;\\">
        <div class=\\"ix-collapse-panel-content-box\\">
          <!---->
        </div>
      </div>
    </transition-stub>
  </div>
  <div class=\\"ix-collapse-panel ix-collapse-panel-expanded\\">
    <div class=\\"ix-header ix-header-md\\">
      <div class=\\"ix-header-content\\"><span class=\\"ix-header-prefix\\"><i class=\\"ix-icon ix-icon-right\\" style=\\"transform: rotate(90deg);\\" role=\\"img\\" aria-label=\\"right\\"></i></span>
        <!----><span class=\\"ix-header-title\\">header 1</span>
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    <transition-stub>
      <div class=\\"ix-collapse-panel-content\\">
        <div class=\\"ix-collapse-panel-content-box\\">
          <!---->
        </div>
      </div>
    </transition-stub>
  </div>
  <div class=\\"ix-collapse-panel\\">
    <div class=\\"ix-header ix-header-md\\">
      <div class=\\"ix-header-content\\"><span class=\\"ix-header-prefix\\"><i class=\\"ix-icon ix-icon-right\\" style=\\"transform: rotate(0deg);\\" role=\\"img\\" aria-label=\\"right\\"></i></span>
        <!----><span class=\\"ix-header-title\\">header 2</span>
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    <transition-stub>
      <div class=\\"ix-collapse-panel-content\\" style=\\"display: none;\\">
        <div class=\\"ix-collapse-panel-content-box\\">
          <!---->
        </div>
      </div>
    </transition-stub>
  </div>
</div>"
`;
